--- a/.github/workflows/actionPractice.yml
+++ b/.github/workflows/actionPractice.yml
@@ -9,6 +9,8 @@ on:
     branches: [ "master" ]
   pull_request:
     branches: [ "master" ]
+  fork:
+    branches: ["master"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
