--- a/.github/workflows/actionPractice.yml
+++ b/.github/workflows/actionPractice.yml
@@ -36,5 +36,15 @@ jobs:
         run: |
           echo "Now ending build workflow."
           echo "Have a great day!"
+          
+    github_info:
+    runs-on: ubuntu-latest
+    steps:
+        - env:
+            GITHUB_CONTEXT: ${{ toJson(github) }}
+          run: |
+            echo Triggered Event: ${{ github.event_name }}
+            echo Current Repository: ${{ github.repository }}
+            echo "$GITHUB_CONTEXT"
 
 
